--- a/account/templates/style/content.css
+++ b/account/templates/style/content.css
@@ -297,6 +297,10 @@ select:focus, select:hover {
     font-size: 16px;
 }
 
+.login-form {
+    text-align: center;
+}
+
 .cookie-alert {
     background-color: #1a1a1a;
     color: white;
@@ -397,3 +401,125 @@ select:focus, select:hover {
     padding: 5px 5px;
 }
 
+.django-message {
+    background-color:forestgreen;
+    color: white;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 30%;
+    right: 30%;
+    border-radius: 10px;
+    z-index: 1000;
+    font-family: "Arial", "Verdana", "Helvectica";
+    padding-bottom: 25px;
+}
+
+.hide {
+    display: none;
+}
+
+#match-list td:hover {
+    background-color: lightgray;
+}
+
+.match-list {
+    display: block;
+}
+
+.match-list .item {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    display: inline-block;
+    margin: 10px 10px;
+    padding-bottom: 5px;
+    border: 1px solid #1a1a1a;
+    border-radius: 15px;
+    color: white;
+    font-family: "Arial", "Verdana", "Helvectica";
+    background-color: gray;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+.match-list .item::-webkit-scrollbar {
+    display: none;
+}
+
+.match-list .item:hover {
+    box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+    border: 1px solid rgba(81, 203, 238, 1);
+}
+.match-list .item .top {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    font-weight: bold;
+    overflow-y: scroll; 
+    scrollbar-width: none; 
+    word-wrap: break-word; 
+    text-align: center;
+    -ms-overflow-style: none;
+}
+.match-list .item .top::-webkit-scrollbar {
+    display: none;
+}
+.match-list .item .top a {
+    color: white;
+}
+.match-list .item .top img {
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 10px;
+    object-fit: cover;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+.match-list .item .middle {
+    position: absolute;
+    width: 100%;
+    top: 31%;
+    bottom: 24%;
+    text-align: center;
+    overflow-y: scroll;
+    word-wrap: break-word;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+.match-list .item .middle::-webkit-scrollbar {
+    display: none;
+}
+.match-list .item .bottom {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 25%;
+}
+.match-list .icon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    height: 30px;
+}
+
+.bottom .button-like {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    border-radius: 15px;
+}
+.bottom .button-like:hover {
+    background-color: darkgray;
+}
+
+.bottom .competitive {
+    position: absolute; 
+    bottom: 0; 
+    margin-bottom: 0; 
+    width: 100%
+}
