--- a/multiplayer/templates/multiplayer/lobby.css
+++ b/multiplayer/templates/multiplayer/lobby.css
@@ -36,8 +36,12 @@
     height: 30%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: left;
     font-weight: bold;
+    overflow-y: scroll; 
+    scrollbar-width: none; 
+    word-wrap: break-word; 
+    text-align: center
 }
 .match-list .item .top a {
     color: white;
