--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -37,7 +37,7 @@
     <div class="topmenu" id="topmenu">
         <div class="logo">
             <a class="icon" href="javascript:void(0);" onclick="activateMenu('sidemenu');">
-                &#9776;<sup><strong><span style="color: orange;" id="notifications-count">{% with count=request.notifications.count %}{% if count > 0 %}{{ count }}{% endif %}{% endwith %}</span></strong></sup>
+                &#9776;<sup><strong><span style="color: orange;" id="notifications-count">{% with count=user.notifications.count %}{% if count > 0 %}{{ count }}{% endif %}{% endwith %}</span></strong></sup>
             </a>
         </div>
         <div class="search"><a href="{% url 'account:home' %}"> </a></div>
