--- a/multiplayer/templates/multiplayer/lobby.html
+++ b/multiplayer/templates/multiplayer/lobby.html
@@ -34,11 +34,11 @@
         {% for match in user_matches.all %}
             <div class="item">
                 <div class="top" style="justify-content: left">
-                    <img src="{% static 'icons/match.png' %}" class="image">{{ match.members.all.count }}/{{ match.member_limit }}
+                    <img src="{% static 'icons/match.png' %}" class="image">{{ match.members.count }}/{{ match.member_limit }}
                 </div>
                 
                 <div class="middle">
-                    {% for k, v in match.member_positions.items %}{% if v == match.admin.username %}<b style="color: red">{{ v }}</b>{% else %}{{ v }}{% endif %}{% if forloop.counter < match.members.all.count %}, {% endif %}{% endfor %}
+                    {% for k, v in match.member_positions.items %}{% if v == match.admin.username %}<b style="color: red">{{ v }}</b>{% else %}{{ v }}{% endif %}{% if forloop.counter < match.members.count %}, {% endif %}{% endfor %}
                 </div>
                 <div class="bottom">
                     <div class="button-like" onclick="openLink('{{ match.get_absolute_url }}')">
