--- a/scheduling/templates/scheduling/datetimepicker.html
+++ b/scheduling/templates/scheduling/datetimepicker.html
@@ -8,6 +8,7 @@
     $('.datetime').datetimepicker({
         format: 'd.m.Y H:i',
         dayOfWeekStart: 1,
-        closeOnWithoutClick: false
+        closeOnWithoutClick: false,
+        step: 30
     });
 </script>
