--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -30,7 +30,7 @@
         {% endif %}
         <div class="competitive" style="margin: 10px 0; font-size: 16px;">
             <div class="left" onclick=openLink("{% url 'account:password_reset' %}")>
-                <img src="{% static 'icons/reset.png' %}">
+                <img src="{% static 'icons/password_reset.png' %}">
                 {% trans "Passwort zurücksetzen" %}
             </div>
             <div class="right" onclick=openLink("{% url 'account:register' %}")>
