--- a/activity/templates/activity/category_list.html
+++ b/activity/templates/activity/category_list.html
@@ -20,4 +20,7 @@
             </div>
         {% endfor %}
     </div>
+    <script>
+        {% include 'javascript/list.js' %}
+    </script>
 {% endblock %}
